Set ordering of the media items shown on the manage view, and remove redundant html class

--- a/app/media_management/templates/manage/index.html
+++ b/app/media_management/templates/manage/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <!-- List media items -->
-    <div class="container media-items">
+    <div class="media-items">
         {% for media_item in media_items %}
         <div class="item-wrapper" data-id="{{media_item.id}}">
             <!-- Media item meta information here -->
